ext/css/settings.css
/* ... */
.hotkey-list-item-action {
    flex: 1 1 auto;
}
.hotkey-list-item-enabled-button-container {
    margin-left: 0.375em;
}
button.hotkey-list-item-enabled-button {
    display: flex;
    flex-flow: row nowrap;
    align-items: stretch;
    width: auto;
}
button.hotkey-list-item-enabled-button[data-scope-count='0'] {
    text-decoration: line-through;
}
.hotkey-list-item-enabled-button-label {
    flex: 1 1 auto;
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
}
.hotkey-list-item-enabled-button-label>.checkbox {
    margin-right: 0.5em;
}
.hotkey-list-item-action-argument-container {
    margin-left: 0.375em;
    flex: 1 1 auto;
    display: flex;
    flex-flow: row nowrap;
    align-items: stretch;
    width: var(--input-width-large);
}
.hotkey-argument-label {
    margin-right: 0.25em;
}
.hotkey-list-item-flex-row {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
}
.hotkey-list-item-flex-row-label {
    margin: 0 0.5em 0 1em;
}

.hotkey-scope-popup-menu-item-label {
    flex: 1 1 auto;
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
}
.hotkey-scope-popup-menu-item-label>.checkbox {
    margin-right: 0.5em;
}

.inline-icon {
    position: relative;
    width: calc(1em * (16 / var(--font-size-no-units)));
    height: calc(1em * (16 / var(--font-size-no-units)));
    top: calc(1em * (3 / var(--font-size-no-units)));
}

.badge {
    position: relative;
    width: var(--badge-size);
    height: var(--badge-size);
    margin: 0;
    padding: 0;
    border-radius: 50%;
    box-shadow: var(--shadow-vertical);
}
.badge:not([hidden]) {
    display: block;
}
.badge>.icon {
    display: block;
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
}
.badge.badge-small-icon>.icon {
    margin: calc(1em / var(--font-size-no-units));
}
.badge.info-badge {
    background-color: var(--accent-color-lighter);
}
.badge.info-badge>.icon {
    background-color: var(--accent-color);
}
.badge.warning-badge {
    background-color: var(--warning-color-light);
}
.badge.warning-badge>.icon {
    background-color: var(--warning-color);
}
.badge.danger-badge {
    background-color: var(--danger-color-lighter);
}
.badge.danger-badge>.icon {
    background-color: var(--danger-color);
}

.collapsible-dictionary-list {
    width: 100%;
    display: flex;
    flex-flow: column nowrap;
    align-items: stretch;
}
.collapsible-dictionary-item {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    margin-left: calc(var(--modal-padding-horizontal) * -1);
    margin-right: calc(var(--modal-padding-horizontal) * -1);
    padding: var(--settings-group-inner-horizontal-padding-fourth) var(--modal-padding-horizontal);
}
.collapsible-dictionary-item:not(:first-child) {
    border-top: var(--thin-border-size) solid var(--separator-color2);
}
.collapsible-dictionary-cell {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
}
.collapsible-dictionary-cell:first-of-type {
    flex: 1 1 auto;
}
.collapsible-dictionary-cell:not(:first-of-type) {
    flex: 0 0 auto;
    margin-left: 1em;
}
.collapsible-dictionary-cell-label {
    margin-left: 0.375em;
}

.page-loading-stalled-notification {
    border: 1px solid var(--danger-color);
}
:root:not([data-loading-stalled=true]) .page-loading-stalled-notification {
    display: none;
}

.warn-custom-templates-notification {
    border: 1px solid var(--danger-color);
}
:root:not([data-warn-custom-templates=true]) .warn-custom-templates-notification {
    display: none;
}

.test-anki-note-viewer-container {
    margin-top: 0.85em;
    display: flex;
    flex-flow: row wrap;
    align-items: flex-start;
}
.test-anki-note-viewer-container>:nth-child(n+2) {
    margin-left: 0.5em;
}
.test-anki-note-viewer-button {
    flex: 0 0 auto;
}
.test-anki-note-viewer-results {
    align-self: center;
}
.test-anki-note-viewer-results[data-success=true] {
    color: var(--success-color);
}
.test-anki-note-viewer-results[data-success=false] {
    color: var(--danger-color);
}


/* Dictionary settings */
.dictionary-list {
    width: 100%;
    display: grid;
    grid-template-columns: auto auto 1fr auto auto auto auto;
    grid-template-rows: auto;
    place-items: center start;
    margin-top: 0.5em;
}
.dictionary-list-index {
    margin-right: 0.5em;
}
.dictionary-list[data-count='0']>.dictionary-item-top {
    display: none;
}
.dictionary-item-button-height {
    height: var(--icon-button-size);
}
.dictionary-item {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    border-top: var(--thin-border-size) solid var(--separator-color2);
}
.dictionary-item-enabled-toggle-container {
    margin-right: 0.5em;
}
.dictionary-item-title-container {
    flex: 1 1 auto;
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    margin-right: 0.5em;
}
.dictionary-title {
    color: inherit;
    transition: color var(--animation-duration) ease-in-out;
}
.dictionary-item[data-enabled=false] .dictionary-title {
    color: var(--text-color-light2);
}
input[type=number].dictionary-priority {
    margin-top: 0;
    margin-right: 0.5em;
}
/* ... */

